Add a PropEr dependency.

--- a/rebar.config
+++ b/rebar.config
@@ -2,3 +2,8 @@
 	    report_warnings, {warn_format,1}, warn_export_vars,
 	    warn_obsolete_guard]}.
 {dialyzer_opts, [{warnings,[unmatched_returns]}]}.
+
+{deps, [
+       {proper, ".*", {git, "git://github.com/manopapad/proper.git", "master"}}
+       ]}.
+
